Added entity and db table

--- a/IDS-backend/src/main/resources/application.properties
+++ b/IDS-backend/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.liquibase.enabled=true
 # Logging
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=INFO
 logging.file.name=logs/application.log
