--- a/IDS-backend/pom.xml
+++ b/IDS-backend/pom.xml
@@ -55,6 +55,48 @@
 			<scope>test</scope>
 		</dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.10.0</version>
+        </dependency>
+
+        <!--        <dependency>-->
+<!--            <groupId>io.swagger.core.v3</groupId>-->
+<!--            <artifactId>swagger-annotations</artifactId>-->
+<!--            <version>2.2.34</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.swagger.parser.v3</groupId>-->
+<!--            <artifactId>swagger-parser</artifactId>-->
+<!--            <version>2.1.31</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.openapitools</groupId>-->
+<!--            <artifactId>jackson-databind-nullable</artifactId>-->
+<!--            <version>0.2.6</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>javax.servlet</groupId>-->
+<!--            <artifactId>javax.servlet-api</artifactId>-->
+<!--            <version>3.0.1</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>javax.validation</groupId>-->
+<!--            <artifactId>validation-api</artifactId>-->
+<!--            <version>1.1.0.Final</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>javax.annotation</groupId>-->
+<!--            <artifactId>javax.annotation-api</artifactId>-->
+<!--            <version>1.2</version>-->
+<!--        </dependency>-->
+
+
+
+
+        <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
         </dependency>
@@ -86,7 +128,35 @@
 					</excludes>
 				</configuration>
 			</plugin>
-		</plugins>
+<!--            <plugin>-->
+<!--                <groupId>org.openapitools</groupId>-->
+<!--                <artifactId>openapi-generator-maven-plugin</artifactId>-->
+<!--                <version>7.17.0</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>generate</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <inputSpec>${project.basedir}/src/main/resources/api.yaml</inputSpec>-->
+<!--                            <generatorName>spring</generatorName>-->
+<!--                            <output>${project.build.directory}/generated-sources/openapi</output>-->
+<!--                            <modelPackage>com.mabphun.ids_backend.api.models</modelPackage>-->
+<!--                            <apiPackage>com.mabphun.ids_backend.api.apis</apiPackage>-->
+<!--                            <configOptions>-->
+<!--                                <useJakartaEe>true</useJakartaEe>-->
+<!--                                <interfaceOnly>true</interfaceOnly>-->
+<!--                                <useTags>true</useTags>-->
+<!--                                <dateLibrary>java8</dateLibrary>-->
+<!--                                <modelNameSuffix>Dto</modelNameSuffix>-->
+<!--                                <delegatePattern>true</delegatePattern>-->
+<!--                                <performBeanValidation>true</performBeanValidation>-->
+<!--                            </configOptions>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+        </plugins>
 	</build>
 
 </project>
